# hotel-booking-django

./: .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose-simple.yml  docker-compose.yml  fix_all_ruff.sh  full_test.sh  pyproject.toml  pytest.ini  ruff.toml  setting.json
.backup/tests/: conftest.py  test_all.py
.github/workflows/: ci.yml
bookings/: serializers.py
bookings/management/commands/: wait_for_db.py
bookings/migrations/: 0001_initial.py
config/: exceptions.py  settings.py  urls.py
config/management/commands/: wait_for_db.py
rooms/: admin.py  serializers.py  urls.py  views.py
src/: manage.py
src/bookings/: admin.py  apps.py  models.py  serializers.py  views.py
src/bookings/management/commands/: wait_for_db.py
src/bookings/migrations/: 0001_initial.py  0002_alter_booking_options_alter_booking_created_at_and_more.py
src/config/: asgi.py  exceptions.py  urls.py
src/config/management/commands/: wait_for_db.py
src/config/settings/: __init__.py  base.py  config.py
src/rooms/: admin.py  models.py  serializers.py  views.py
src/rooms/migrations/: 0001_initial.py  0002_alter_hotelroom_options_alter_hotelroom_created_at_and_more.py
tests/: conftest.py  test_all.py
tests/rooms/: test_api.py
tests_backup/: test_all.py  test_all_in_one.py
