[tool.poetry]
name = "hotel-booking-django"
version = "0.1.0"
description = "Hotel Booking System with Django"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2"
djangorestframework = "^3.14"  # Исправлено: django-rest-framework → djangorestframework
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"
drf-yasg = "^1.21"  # Добавляем недостающий пакет

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.7"
pytest-cov = "^4.1"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
